Ajout pages de base

--- a/web/src/app/components/accueil/accueil.component.html
+++ b/web/src/app/components/accueil/accueil.component.html
@@ -1,1 +1,4 @@
-<p>accueil works!</p>
+<h1>Bienvenue sur la page d'accueil !</h1>
+<div>
+    <a href="/evenement">Crémaillère de Mathilde</a>
+</div>
