--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -4,5 +4,5 @@
   <a href="/accueil">Accueil</a>
   <a href="/creation">+</a>
   <a href="/profil">Profil</a>
-  <p>bonjour partie 2 </p>
+  <p>bonjour partie 2 partie 3  </p>
 </div>
