--- a/mobile/src/app/tab1/tab1.page.html
+++ b/mobile/src/app/tab1/tab1.page.html
@@ -11,7 +11,16 @@
     <ion-toolbar>
       <ion-title size="large">Accueil</ion-title>
     </ion-toolbar>
-  </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+    <ion-card *ngFor="let event of events">
+      <ion-card-header>
+        <ion-card-title>{{ event.nom }}</ion-card-title>
+        <ion-card-subtitle>{{ event.date }}</ion-card-subtitle>
+      </ion-card-header>
+    
+      <ion-card-content>
+        {{ event.desc }}      
+      </ion-card-content>
+    </ion-card>
+  </ion-header>
 </ion-content>
