--- a/mobile/src/app/tab1/tab1.page.html
+++ b/mobile/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Accueil
+      Mes événements
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,7 +9,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Accueil</ion-title>
+      <ion-title size="large">Mes événements</ion-title>
     </ion-toolbar>
 
     <ion-card *ngFor="let event of events">
