--- a/mobile/src/app/tab1/tab1.page.html
+++ b/mobile/src/app/tab1/tab1.page.html
@@ -6,13 +6,13 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="ion-text-center">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Mes événements</ion-title>
+      <ion-title size="large" class="ion-text-center">Mes événements</ion-title>
     </ion-toolbar>
 
-    <ion-card *ngFor="let event of events">
+    <ion-card *ngFor="let event of events" class="ion-text-center">
       <ion-card-header>
         <ion-card-title>{{ event.nom }}</ion-card-title>
         <ion-card-subtitle>{{ event.date }}</ion-card-subtitle>
