--- a/mobile/src/app/tab2/tab2.page.html
+++ b/mobile/src/app/tab2/tab2.page.html
@@ -20,6 +20,7 @@
         labelPlacement="stacked"
         [clearInput]="true"
         placeholder="ex: Bière entre pote"
+        [(ngModel)]="evenement"
       >
       <ion-icon slot="start" name="beer-outline" aria-hidden="true"></ion-icon>
       </ion-input>
@@ -31,6 +32,7 @@
         labelPlacement="stacked"
         [clearInput]="true"
         placeholder="ex: Chez Mathilde"
+        [(ngModel)]="nomLieu"
       >
       <ion-icon slot="start" name="location-outline" aria-hidden="true"></ion-icon>
     </ion-input>
@@ -42,6 +44,7 @@
         labelPlacement="stacked"
         [clearInput]="true"
         placeholder="ex: Mardi 12/01/2024 à 19h"
+        [(ngModel)]="date"
       >
       <ion-icon slot="start" name="time-outline" aria-hidden="true"></ion-icon>
     </ion-input>
@@ -51,21 +54,27 @@
     <ion-input
         label="Lit(s) disponible(s)"
         labelPlacement="stacked"
-        [clearInput]="true"
+        [clearInput]="false"
         placeholder="ex: 6lits"
+        [(ngModel)]="lits"
       >
-      <ion-icon slot="start" name="time-outline" aria-hidden="true"></ion-icon>
+      <ion-icon slot="start" name="bed-outline" aria-hidden="true"></ion-icon>
     </ion-input>
 
     <ion-input
-        label="Date"
+        label="Bob(s)"
         labelPlacement="stacked"
-        [clearInput]="true"
-        placeholder="ex: Mardi 12/01/2024"
+        [clearInput]="false"
+        placeholder="ex: 5 bobs"
+        [(ngModel)]="bob"
       >
-      <ion-icon slot="start" name="time-outline" aria-hidden="true"></ion-icon>
+      <ion-icon slot="start" name="car-outline" aria-hidden="true"></ion-icon>
     </ion-input>
   </ion-item>
 
   </ion-list>
+  <ion-button shape="round" size="small" (click)="">
+    Créer
+    <ion-icon name="send-outline"></ion-icon>  
+  </ion-button>
 </ion-content>
