--- a/mobile/src/app/tab2/tab2.page.html
+++ b/mobile/src/app/tab2/tab2.page.html
@@ -73,7 +73,7 @@
   </ion-item>
 
   </ion-list>
-  <ion-button shape="round" size="small" (click)="">
+  <ion-button shape="round" size="small" (click)="creationEvent()">
     Créer
     <ion-icon name="send-outline"></ion-icon>  
   </ion-button>
