--- a/mobile/src/app/tab3/tab3.page.html
+++ b/mobile/src/app/tab3/tab3.page.html
@@ -13,5 +13,56 @@
     </ion-toolbar>
   </ion-header>
 
+  <ion-card>
+    <ion-card-header id="photoProfil">
+      <div class="img-box">
+        <img src="../../assets/profil/">
+      </div> 
+      <ion-card-title>Hugo Neutre</ion-card-title>
+      <ion-card-subtitle>&#64;lebgdubat7</ion-card-subtitle>
+    </ion-card-header>
+  
+    <ion-card-content>
+      <h1>Description</h1>
+      <p></p>
+
+    </ion-card-content>
+  </ion-card>
+
+  
+
+  <ion-item>
+    <ion-card>
+      <ion-card-content>
+        <ion-card-title>Card Title</ion-card-title>
+        <ion-card-subtitle>Statut</ion-card-subtitle>
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card>  
+      <ion-card-content>
+        <ion-icon name="logo-instagram" size="large"></ion-icon>
+        <ion-icon name="logo-facebook" size="large"></ion-icon>
+      </ion-card-content>
+    </ion-card>
+  </ion-item>
+    
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Avenue du Trone 112, 1360 Perwez</ion-card-title>
+      <ion-card-subtitle>Adresse</ion-card-subtitle>
+    </ion-card-header>
+
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>+32 485 92 45 48</ion-card-title>
+      <ion-card-subtitle>Téléphone</ion-card-subtitle>
+    </ion-card-header>
+
+  </ion-card>
+        
+      
   
 </ion-content>
