--- a/mobile/src/app/tabs/tabs.page.html
+++ b/mobile/src/app/tabs/tabs.page.html
@@ -1,24 +1,21 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1" href="/tabs/tab1">
-      <ion-icon aria-hidden="true" name="triangle"></ion-icon>
+      <ion-icon aria-hiden="true" name="calendar-outline"></ion-icon>
       <ion-label id="Izi">Izi</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2" href="/tabs/tab2">
       <ion-fab>
         <ion-fab-button size="small">
-          <ion-icon name="add"></ion-icon>
+          <ion-icon aria-hiden="true" name="add"></ion-icon>
         </ion-fab-button>
       </ion-fab>
-      <ion-label>
-        Tab2
-      </ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3" href="/tabs/tab3">
-      <ion-icon aria-hidden="true" name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <ion-icon aria-hiden="true" name="person-outline"></ion-icon>
+      <ion-label>Profil</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
