--- a/mobile/src/app/tabs/tabs.page.scss
+++ b/mobile/src/app/tabs/tabs.page.scss
@@ -1,7 +1,7 @@
 ion-fab-button {
-    --background: #b7f399;
-    --background-activated: #87d361;
-    --background-hover: #a3e681;
+    --background: #F9E6AC;
+    --background-activated: #fbf3db;
+    --background-hover: #fef8e5;
     --border-radius: 15px;
     --box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.3), 0px 1px 3px 1px rgba(0, 0, 0, 0.15);
     --color: black;
