--- a/mobile/src/app/tab3/tab3.page.html
+++ b/mobile/src/app/tab3/tab3.page.html
@@ -24,7 +24,7 @@
   
     <ion-card-content>
       <h1>Description</h1>
-      <p></p>
+      <p>Neutre dans l'affaire</p>
 
     </ion-card-content>
   </ion-card>
