--- a/mobile/src/app/tab3/tab3.page.html
+++ b/mobile/src/app/tab3/tab3.page.html
@@ -31,7 +31,6 @@
 
   
 
-  <ion-item>
     <ion-card>
       <ion-card-content>
         <ion-card-title>Card Title</ion-card-title>
@@ -42,10 +41,14 @@
     <ion-card>  
       <ion-card-content>
         <ion-icon name="logo-instagram" size="large"></ion-icon>
+        <label>&#64;hugoneutre</label>
+        
+        <br>
+
         <ion-icon name="logo-facebook" size="large"></ion-icon>
+        <label>Hugo Neutre</label>
       </ion-card-content>
     </ion-card>
-  </ion-item>
     
   <ion-card>
     <ion-card-header>
