--- a/mobile/src/app/components/profil/creation-profil/creation-profil.component.html
+++ b/mobile/src/app/components/profil/creation-profil/creation-profil.component.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true" color="primary">
   <ion-toolbar>
     <ion-title>
       Création profil
