--- a/mobile/src/app/components/profil/creation-profil/creation-profil.component.html
+++ b/mobile/src/app/components/profil/creation-profil/creation-profil.component.html
@@ -10,7 +10,10 @@
   <ion-card>
 
       <ion-card-header>
-          <ion-input
+        <ion-list>
+
+          <ion-item>
+            <ion-input
             label="Nom"
             labelPlacement="stacked"
             [clearInput]="true"
@@ -19,56 +22,79 @@
           >
           <ion-icon slot="start" name="at-outline" aria-hidden="true"></ion-icon>
           </ion-input>
+          </ion-item>
 
-          <ion-input
+          <ion-item>
+            <ion-input
         label="Prénom"
         labelPlacement="stacked"
         [clearInput]="true"
         placeholder="ex: Marssel"
         [(ngModel)]="prenom"
         ></ion-input>
+          </ion-item>
 
-        <ion-input
+          <ion-item>
+            <ion-input
         label="Adresse"
         labelPlacement="stacked"
         [clearInput]="true"
         placeholder="ex: Chaussée de méfess"
         [(ngModel)]="adresse"
         ></ion-input>
+          </ion-item>
 
-        <ion-input
-        label="Adresse"
+          <ion-item>
+            <ion-input
+        label="Telephone"
         labelPlacement="stacked"
         [clearInput]="true"
         placeholder="ex: +32 314 43 43 34"
         [(ngModel)]="tel"
         ></ion-input>
+          </ion-item>
 
-        <ion-input
-        label="Instagram"
-        labelPlacement="stacked"
-        [clearInput]="true"
-        placeholder="ex: @selsurmars"
-        [(ngModel)]="insta"
-        ></ion-input>
+          <ion-item>
+            <ion-input
+            label="Instagram"
+            labelPlacement="stacked"
+            [clearInput]="true"
+            placeholder="ex: @selsurmars"
+            [(ngModel)]="insta"
+            ></ion-input>
+          </ion-item>
 
-        <ion-input
+          <ion-item>
+            <ion-input
         label="Facebook"
         labelPlacement="stacked"
         [clearInput]="true"
         placeholder="ex: Marssel Marcel"
         [(ngModel)]="facebook"
         ></ion-input>
+          </ion-item>
 
-        <ion-input
+          <ion-item>
+            <ion-input
         label="Description"
         labelPlacement="stacked"
         [clearInput]="true"
         placeholder="ex: Je me présente je m'appelle Marssel je voudrais bien réussir ma vie"
         [(ngModel)]="description"
         ></ion-input>
+          </ion-item>
 
+
+
+        </ion-list>
       </ion-card-header>
+
+      <ion-card-content>
+        <ion-button shape="round" size="small" (click)="creationProfil()">
+          Je souscris à un abonnement
+          <ion-icon name="send-outline"></ion-icon>  
+        </ion-button>
+      </ion-card-content>
 
   </ion-card>
 </ion-content>
