--- a/mobile/src/app/components/profil/creation-profil/creation-profil.component.html
+++ b/mobile/src/app/components/profil/creation-profil/creation-profil.component.html
@@ -18,7 +18,7 @@
             labelPlacement="stacked"
             [clearInput]="true"
             placeholder="ex: Marcel"
-            [(ngModel)]="nom"
+            [(ngModel)]="userData.name"
           >
           <ion-icon slot="start" name="at-outline" aria-hidden="true"></ion-icon>
           </ion-input>
@@ -30,7 +30,7 @@
         labelPlacement="stacked"
         [clearInput]="true"
         placeholder="ex: Marssel"
-        [(ngModel)]="prenom"
+        [(ngModel)]="userData.firstName"
         ></ion-input>
           </ion-item>
 
@@ -40,7 +40,7 @@
         labelPlacement="stacked"
         [clearInput]="true"
         placeholder="ex: Chaussée de méfess"
-        [(ngModel)]="adresse"
+        [(ngModel)]="userData.address"
         ></ion-input>
           </ion-item>
 
@@ -50,7 +50,7 @@
         labelPlacement="stacked"
         [clearInput]="true"
         placeholder="ex: +32 314 43 43 34"
-        [(ngModel)]="tel"
+        [(ngModel)]="userData.numberPhone"
         ></ion-input>
           </ion-item>
 
@@ -60,7 +60,7 @@
             labelPlacement="stacked"
             [clearInput]="true"
             placeholder="ex: @selsurmars"
-            [(ngModel)]="insta"
+            [(ngModel)]="userData.instagram"
             ></ion-input>
           </ion-item>
 
@@ -70,7 +70,7 @@
         labelPlacement="stacked"
         [clearInput]="true"
         placeholder="ex: Marssel Marcel"
-        [(ngModel)]="facebook"
+        [(ngModel)]="userData.facebook"
         ></ion-input>
           </ion-item>
 
@@ -80,7 +80,7 @@
         labelPlacement="stacked"
         [clearInput]="true"
         placeholder="ex: Je me présente je m'appelle Marssel je voudrais bien réussir ma vie"
-        [(ngModel)]="description"
+        [(ngModel)]="userData.description"
         ></ion-input>
           </ion-item>
 
