--- a/mobile/src/app/tab1/tab1.page.html
+++ b/mobile/src/app/tab1/tab1.page.html
@@ -12,7 +12,7 @@
       <ion-title size="large" class="ion-text-center">Mes événements</ion-title>
     </ion-toolbar>
 
-    <ion-card *ngFor="let event of events;index as i" class="ion-text-center" [routerLink]="['/evenement']">
+    <ion-card *ngFor="let event of events;index as i" class="ion-text-center" [routerLink]="['/tabs/tab1/evenement']">
       <ion-card-header>
         <ion-card-title>{{ event.nom }}</ion-card-title>
         <ion-card-subtitle>{{ event.date }}</ion-card-subtitle>
@@ -22,4 +22,5 @@
       </ion-card-content>
     </ion-card>
   </ion-header>
+  <ion-router-outlet></ion-router-outlet>
 </ion-content>
