--- a/mobile/src/app/components/login/login.component.html
+++ b/mobile/src/app/components/login/login.component.html
@@ -27,7 +27,7 @@
       Connexion
     </ion-button>
     <br>
-    <ion-button shape="round" expand="block">Inscription</ion-button>
+    <ion-button shape="round" expand="block" href="/creation">Inscription</ion-button>
 
     <ion-item lines="none">
       <ion-label text-center >Ou connecter-vous avec :</ion-label>
