--- a/mobile/src/app/components/profil/creation-profil/creation-profil.component.html
+++ b/mobile/src/app/components/profil/creation-profil/creation-profil.component.html
@@ -18,7 +18,7 @@
             labelPlacement="stacked"
             [clearInput]="true"
             placeholder="ex: lebgdubat57"
-            [(ngModel)]="userData.id"
+            [(ngModel)]="userData.idProfil"
           >
           <ion-icon slot="start" name="at-outline" aria-hidden="true"></ion-icon>
           </ion-input>
