--- a/mobile/src/app/components/evenement/evenement.component.html
+++ b/mobile/src/app/components/evenement/evenement.component.html
@@ -1,3 +1,48 @@
-<p>
-  evenement works!
-</p>
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-title>
+      {{ event.nom }}
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content [fullscreen]="true" class="ion-text-center">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large" class="ion-text-center">{{ event.nom }}</ion-title>
+    </ion-toolbar>
+
+    <ion-card class="ion-text-center">
+
+      <ion-card-header>
+        <ion-card-title>{{ event.date }} à {{ event.heure }}</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>Date et heure</ion-card-content>
+    </ion-card>
+
+    <ion-card class="ion-text-center">
+
+      <ion-card-header>
+        <ion-card-title>{{ event.lieu }}</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>Adresse</ion-card-content>
+    </ion-card>
+
+    <ion-row class="flex-container">
+      <ion-card id="flex-item-1" class="ion-text-center flex-item">
+        <ion-card-header>
+          <ion-card-title>{{ event.nbrLit }}</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>Lits libres</ion-card-content>
+      </ion-card>
+
+      <ion-card class="ion-text-center flex-item">
+        <ion-card-header>
+          <ion-card-title>{{ event.nbrBob }}</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>Bobs</ion-card-content>
+      </ion-card>
+    </ion-row>
+
+  </ion-header>
+</ion-content>
