--- a/mobile/src/app/tab1/tab1.page.html
+++ b/mobile/src/app/tab1/tab1.page.html
@@ -12,8 +12,7 @@
       <ion-title size="large" class="ion-text-center">Mes événements</ion-title>
     </ion-toolbar>
 
-
-    <ion-card *ngFor="let event of events;index as i" class="ion-text-center" [routerLink]="['/tabs/tab1/evenement']">
+    <ion-card *ngFor="let event of events;index as i" class="ion-text-center" [routerLink]="['/tabs/tab4']">
 
       <ion-card-header>
         <ion-card-title>{{ event.nom }}</ion-card-title>
