US 2.16 Log des soirées push

--- a/mobile/src/app/components/menu/menu/menu.component.html
+++ b/mobile/src/app/components/menu/menu/menu.component.html
@@ -5,6 +5,8 @@
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">This is the menu content.</ion-content>
+  <ion-content class="ion-padding"></ion-content>
+  <ion-card [routerLink]="['/tabs/tab5']">Anciens Évènements</ion-card>
 </ion-menu>
 <ion-buttons slot="start">
   <ion-menu-button></ion-menu-button>
