--- a/mobile/src/app/tab5/tab5.page.html
+++ b/mobile/src/app/tab5/tab5.page.html
@@ -13,7 +13,7 @@
     </ion-toolbar>
 
 
-    <ion-card *ngFor="let event of tablePastEvents;index as i" class="ion-text-center" [routerLink]="['/tabs/tab5/evenement']">
+    <ion-card *ngFor="let event of tablePastEvents;index as i" class="ion-text-center" [routerLink]="['/evenement',event.id]">
 
       <ion-card-header>
         <ion-card-title>{{ event.nom }}</ion-card-title>
