--- a/mobile/src/app/components/evenement/evenement.component.scss
+++ b/mobile/src/app/components/evenement/evenement.component.scss
@@ -1,6 +1,5 @@
 ion-card{
     background-color: #F9E6AC;
-    margin-bottom: -10px;
 }
 
 .flex-container {
@@ -21,21 +20,22 @@ ion-row {
     margin-bottom: 30px;
     justify-content: space-between;
 }
-
-.card-container{
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
-
-    ion-card-title, ion-card-subtitle {
-        text-align: left;
-    }
-}
-
-.image-container {
-    flex-shrink: 0;
-    margin-left: auto; /* Pour placer l'image à droite */
-    margin-right: 35px;
-    margin-top: -50px;
-    width: 25%; 
-}
+  
+  ion-card-title,
+  ion-card-subtitle {
+    flex: 1;
+    text-align: left;
+    font-size: 20px;
+  }
+  
+  ion-thumbnail {
+    width: auto;
+    height: auto;
+    margin-left: 250px;
+    
+  }
+  
+  img{
+    margin-top: 10px;
+  }
+  
