--- a/mobile/src/app/components/evenement/evenement.component.html
+++ b/mobile/src/app/components/evenement/evenement.component.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      {{ event.nom }}
+      {{ event?.nom }}
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,13 +9,13 @@
 <ion-content [fullscreen]="true" class="ion-text-center">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large" class="ion-text-center">{{ event.nom }}</ion-title>
+      <ion-title size="large" class="ion-text-center">{{ event?.nom }}</ion-title>
     </ion-toolbar>
 
     <ion-card class="ion-text-center">
 
       <ion-card-header>
-        <ion-card-title>{{ event.date }} à {{ event.heure }}</ion-card-title>
+        <ion-card-title>{{ event?.date }} à {{ event?.heure }}</ion-card-title>
       </ion-card-header>
       <ion-card-content>Date et heure</ion-card-content>
     </ion-card>
@@ -23,7 +23,7 @@
     <ion-card class="ion-text-center">
 
       <ion-card-header>
-        <ion-card-title>{{ event.lieu }}</ion-card-title>
+        <ion-card-title>{{ event?.lieu }}</ion-card-title>
       </ion-card-header>
       <ion-card-content>Adresse</ion-card-content>
     </ion-card>
@@ -31,19 +31,19 @@
     <ion-row class="flex-container">
       <ion-card id="flex-item-1" class="ion-text-center flex-item">
         <ion-card-header>
-          <ion-card-title>{{ event.nbrLit }}</ion-card-title>
+          <ion-card-title>{{ event?.nbrLit }}</ion-card-title>
         </ion-card-header>
         <ion-card-content>Lits libres</ion-card-content>
       </ion-card>
 
       <ion-card class="ion-text-center flex-item">
         <ion-card-header>
-          <ion-card-title>{{ event.nbrBob }}</ion-card-title>
+          <ion-card-title>{{ event?.nbrBob }}</ion-card-title>
         </ion-card-header>
         <ion-card-content>Bobs</ion-card-content>
       </ion-card>
     </ion-row>
-    <ion-button [routerLink]="['/update-event',event.id]">
+    <ion-button [routerLink]="['/update-event',event?.id]">
       <ion-icon aria-hidden="true" name="pencil-outline" style="height: 35px; width:150px;"></ion-icon>
     </ion-button>
 
@@ -54,13 +54,18 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-card *ngFor="let profil of eventprofil; index as i" class="status" [routerLink]="['/profil-event',profil.idProfil]">
+  <ion-card *ngFor="let profil of eventprofil; index as i" class="status" [routerLink]="['/profil-event',profil?.idProfil]">
     <ion-card-header class="card-header" style="float:left">
-      <ion-card-subtitle class="role">{{ profil.role }}</ion-card-subtitle>
-        <ion-card-title class="idProfil">{{ profil.idProfil }}</ion-card-title>
+      <ion-card-subtitle class="role">{{ profil?.role }}</ion-card-subtitle>
+        <ion-card-title class="idProfil">{{ profil?.idProfil }}</ion-card-title>
     </ion-card-header>
     <ion-thumbnail class="image-container">
         <img [src]="getImageUrl(profil.role)" alt="Photo">
     </ion-thumbnail>
   </ion-card>
 </ion-content>
+<ion-footer>
+  <ion-buttons slot="start">
+    <ion-back-button defaultHref="/tabs/tab1"></ion-back-button>
+  </ion-buttons>
+</ion-footer>
