--- a/mobile/src/app/tab1/tab1.page.html
+++ b/mobile/src/app/tab1/tab1.page.html
@@ -13,14 +13,14 @@
     </ion-toolbar>
 
 
-    <ion-card *ngFor="let event of tableEvents;index as i" class="ion-text-center" [routerLink]="['/evenement',event.id]">
+    <ion-card *ngFor="let event of tableEvents;index as i" class="ion-text-center" [routerLink]="['/evenement',event?.id]">
 
       <ion-card-header>
-        <ion-card-title>{{ event.nom }}</ion-card-title>
-        <ion-card-subtitle>{{ event.date }}</ion-card-subtitle>
+        <ion-card-title>{{ event?.nom }}</ion-card-title>
+        <ion-card-subtitle>{{ event?.date }}</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
-        {{ event.lieu }}      
+        {{ event?.lieu }}      
       </ion-card-content>
     </ion-card>
   </ion-header>
