--- a/mobile/src/app/tab3/tab3.page.html
+++ b/mobile/src/app/tab3/tab3.page.html
@@ -16,15 +16,15 @@
   <ion-card *ngIf="profil">
     <ion-card-header id="photoProfil">
       <div class="img-box">
-        <img src="../../assets/profil/">
+        <!-- <img src="../../assets/profil/"> -->
       </div> 
-      <ion-card-title>{{profil.firstName}} {{profil.name}}</ion-card-title>
-      <ion-card-subtitle>&#64;{{profil.idProfil}}</ion-card-subtitle>
+      <ion-card-title>{{profil?.firstName}} {{profil?.name}}</ion-card-title>
+      <ion-card-subtitle>&#64;{{profil?.idProfil}}</ion-card-subtitle>
     </ion-card-header>
   
     <ion-card-content>
       <h1>Description</h1>
-      <p>{{profil.description}}</p>
+      <p>{{profil?.description}}</p>
 
     </ion-card-content>
   </ion-card>
@@ -32,18 +32,18 @@
   <ion-card>  
     <ion-card-content>
       <ion-icon name="logo-instagram" size="large"></ion-icon>
-      <label>{{profil.instagram}}</label>
+      <label>{{profil?.instagram}}</label>
         
       <br>
 
       <ion-icon name="logo-facebook" size="large"></ion-icon>
-      <label>{{profil.facebook}}</label>
+      <label>{{profil?.facebook}}</label>
     </ion-card-content>
   </ion-card>
     
   <ion-card>
     <ion-card-header>
-      <ion-card-title>{{profil.address}}</ion-card-title>
+      <ion-card-title>{{profil?.address}}</ion-card-title>
       <ion-card-subtitle>Adresse</ion-card-subtitle>
     </ion-card-header>
 
@@ -51,12 +51,8 @@
 
   <ion-card>
     <ion-card-header>
-      <ion-card-title>{{profil.numberPhone}}</ion-card-title>
+      <ion-card-title>{{profil?.numberPhone}}</ion-card-title>
       <ion-card-subtitle>Téléphone</ion-card-subtitle>
     </ion-card-header>
-
   </ion-card>
-        
-      
-  
 </ion-content>
