fix bugs mode md + ajout logo

--- a/mobile/src/app/components/menu/menu/menu.component.html
+++ b/mobile/src/app/components/menu/menu/menu.component.html
@@ -1,7 +1,9 @@
 <ion-menu contentId="main-content">
-  <ion-header>
+  <ion-header [translucent]="true">
     <ion-toolbar>
-      <ion-title>Iziplan</ion-title>
+      <div class="toolbar-image-container">
+        <img src="../../../../assets/icon/IZIPLAN.png" alt="Logo" class="toolbar-image">
+      </div>
     </ion-toolbar>
   </ion-header>
   <ion-content class="ion-padding">This is the menu content.</ion-content>
