--- a/mobile/src/app/tab1/tab1.page.html
+++ b/mobile/src/app/tab1/tab1.page.html
@@ -1,17 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Mes événements
-    </ion-title>
+    <div class="toolbar-image-container">
+      <img src="../../assets/icon/IZIPLAN.png" alt="Logo" class="toolbar-image">
+    </div>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true" class="ion-text-center">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large" class="ion-text-center">Mes événements</ion-title>
-    </ion-toolbar>
-
+    <h1>Mes événements</h1>
 
     <ion-card *ngFor="let event of tableEvents;index as i" class="ion-text-center" [routerLink]="['/evenement',event?.id]">
 
@@ -23,6 +19,4 @@
         {{ event?.lieu }}      
       </ion-card-content>
     </ion-card>
-  </ion-header>
-  <ion-router-outlet></ion-router-outlet>
 </ion-content>
