--- a/mobile/src/app/tab2/tab2.page.html
+++ b/mobile/src/app/tab2/tab2.page.html
@@ -27,21 +27,13 @@
   </ion-item>
 
   <ion-item>
-    <ion-input
-        label="Heure"
-        labelPlacement="stacked"
-        [clearInput]="true"
-        placeholder="ex: 18h30"
-        [(ngModel)]="eventData.heure"
-      >
-      <ion-icon slot="start" name="location-outline" aria-hidden="true"></ion-icon>
-    </ion-input>
-  </ion-item>
-
-  <ion-item>
-      <ion-label position="stacked">Date</ion-label>
-      <ion-datetime presentation="date" displayFormat="DD/MM/YYYY" [max]="maxDate" [(ngModel)]="eventData.date"></ion-datetime>
-      <ion-icon slot="start" name="time-outline" aria-hidden="true"></ion-icon>
+    <ion-label position="stacked">Date et Heure</ion-label>
+    <ion-datetime 
+      displayFormat="YYYY-MM-DD HH:mm" 
+      pickerFormat="YYYY-MM-DDTHH:mmZ" 
+      [(ngModel)]="eventDateTime"
+      (ionChange)="onDateTimeChange($event)"
+    ></ion-datetime>
   </ion-item>
 
   <ion-item>
