--- a/mobile/src/app/components/menu/menu/menu.component.scss
+++ b/mobile/src/app/components/menu/menu/menu.component.scss
@@ -10,3 +10,9 @@
     max-width: 150px;
     max-height: 150px;
   }
+
+  ion-menu-button {
+    color: black;
+    width: 80px;
+    height: 65px;
+  }
