--- a/mobile/src/app/components/profil/creation-profil/creation-profil.component.html
+++ b/mobile/src/app/components/profil/creation-profil/creation-profil.component.html
@@ -1,8 +1,6 @@
-<ion-header [translucent]="true" color="primary">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Création profil
-    </ion-title>
+    <ion-title>Création de compte</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
