--- a/mobile/src/app/components/update-event/update-event.component.html
+++ b/mobile/src/app/components/update-event/update-event.component.html
@@ -1,8 +1,8 @@
-
+<ion-header>
   <ion-toolbar>
     <ion-title>Modifier l'événement</ion-title>
   </ion-toolbar>
-
+</ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-list>
@@ -11,7 +11,7 @@
         label="Nom de l'événement"
         labelPlacement="stacked"
         [clearInput]="true"
-        placeholder={{event.nom}}
+        placeholder={{event?.nom}}
         [(ngModel)]="event.nom"
       >
       <ion-icon slot="start" name="beer-outline" aria-hidden="true"></ion-icon>
@@ -23,7 +23,7 @@
         label="Heure"
         labelPlacement="stacked"
         [clearInput]="true"
-        placeholder={{event.heure}}
+        placeholder={{event?.heure}}
         [(ngModel)]="event.heure"
       >
       <ion-icon slot="start" name="location-outline" aria-hidden="true"></ion-icon>
@@ -35,7 +35,7 @@
         label="Date"
         labelPlacement="stacked"
         [clearInput]="true"
-        placeholder={{event.date}}
+        placeholder={{event?.date}}
         [(ngModel)]="event.date"
 
       >
@@ -48,7 +48,7 @@
         label="Lieu"
         labelPlacement="stacked"
         [clearInput]="true"
-        placeholder={{event.lieu}}
+        placeholder={{event?.lieu}}
         [(ngModel)]="event.lieu"
       >
       <ion-icon slot="start" name="time-outline" aria-hidden="true"></ion-icon>
@@ -60,7 +60,7 @@
         label="Lit(s) disponible(s)"
         labelPlacement="stacked"
         [clearInput]="false"
-        placeholder={{event.nbrLit}}
+        placeholder={{event?.nbrLit}}
         [(ngModel)]="event.nbrLit"
       >
       <ion-icon slot="start" name="bed-outline" aria-hidden="true"></ion-icon>
@@ -70,7 +70,7 @@
         label="Bob(s)"
         labelPlacement="stacked"
         [clearInput]="false"
-        placeholder={{event.nbrBob}}
+        placeholder={{event?.nbrBob}}
         [(ngModel)]="event.nbrBob"
       >
       <ion-icon slot="start" name="car-outline" aria-hidden="true"></ion-icon>
@@ -81,6 +81,5 @@
     Modifier l'événement
     <ion-icon name="send-outline"></ion-icon>
   </ion-button>
-  
-
 </ion-content>
+
