--- a/mobile/src/app/components/evenement/evenement.component.html
+++ b/mobile/src/app/components/evenement/evenement.component.html
@@ -1,16 +1,8 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      {{ event?.nom }}
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-toolbar>
+  <ion-title>{{ event?.nom }}</ion-title>
+</ion-toolbar>
 
 <ion-content [fullscreen]="true" class="ion-text-center">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large" class="ion-text-center">{{ event?.nom }}</ion-title>
-    </ion-toolbar>
 
     <ion-card class="ion-text-center">
 
@@ -47,12 +39,7 @@
       <ion-icon aria-hidden="true" name="pencil-outline" style="height: 35px; width:150px;"></ion-icon>
     </ion-button>
 
-  </ion-header>
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large" class="ion-text-center">Liste des invités</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <h1>Liste des invités</h1>
 
   <ion-card *ngFor="let profil of eventprofil; index as i" class="status" [routerLink]="['/profil-event',profil?.idProfil]">
     <ion-card-header class="card-header" style="float:left">
