--- a/mobile/src/app/tab2/tab2.page.html
+++ b/mobile/src/app/tab2/tab2.page.html
@@ -1,17 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Création événement
-    </ion-title>
+    <div class="toolbar-image-container">
+      <img src="../../assets/icon/IZIPLAN.png" alt="Logo" class="toolbar-image">
+    </div>    
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large" >Création événement</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <h1>Créer mon événement</h1>
 
   <ion-list>
     <ion-item>
