--- a/mobile/src/app/tab3/tab3.page.scss
+++ b/mobile/src/app/tab3/tab3.page.scss
@@ -6,10 +6,7 @@
     background-color: white;
     
 }
-/*
-ion-card{
-    text-align: center;
-}*/
+
 ion-card{
     background-color: #F9E6AC;
 }
@@ -19,4 +16,35 @@ ion-card{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.toolbar-image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+  
+.toolbar-image {
+    max-width: 150px;
+    max-height: 150px;
+}
+
+h1 {
+    text-align: left;
+    font-weight: bold;
+    margin-left: 5%;
+}
+
+.ios {
+    h1 {
+        font-size: 35px;
+    }
+}
+
+.md {
+    h1 {
+        font-size: 30px;
+    }
 }
