--- a/mobile/src/app/tab5/tab5.page.scss
+++ b/mobile/src/app/tab5/tab5.page.scss
@@ -1,3 +1,34 @@
 ion-card{
     background-color: #F9E6AC;
 }
+
+.toolbar-image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+  
+.toolbar-image {
+    max-width: 150px;
+    max-height: 150px;
+}
+
+h1 {
+    text-align: left;
+    font-weight: bold;
+    margin-left: 5%;
+}
+
+.ios {
+    h1 {
+        font-size: 35px;
+    }
+}
+
+.md {
+    h1 {
+        font-size: 30px;
+    }
+}
