--- a/mobile/src/app/components/menu/menu/menu.component.html
+++ b/mobile/src/app/components/menu/menu/menu.component.html
@@ -8,8 +8,8 @@
   <ion-content class="ion-padding">
     <ion-list>
       
-      <ion-item [routerLink]="['/tabs/tab5']" menuToggle>
-        <ion-button expand="full" color="primary">
+      <ion-item [routerLink]="['/tabs/tab5']">
+        <ion-button menuToggle expand="full" color="primary">
           <ion-label color="dark">Anciens Évènements</ion-label>
         </ion-button>
       </ion-item>
