--- a/mobile/src/app/components/evenement/evenement.component.html
+++ b/mobile/src/app/components/evenement/evenement.component.html
@@ -3,6 +3,7 @@
 </ion-toolbar>
 
 <ion-content [fullscreen]="true" class="ion-text-center">
+    <h1>Informations générales</h1>
 
     <ion-card class="ion-text-center">
 
@@ -53,6 +54,6 @@
 </ion-content>
 <ion-footer>
   <ion-buttons slot="start">
-    <ion-back-button defaultHref="/tabs/tab1"></ion-back-button>
+    <ion-back-button defaultHref="/tabs/tab1" text="" icon="chevron-back-outline"></ion-back-button>
   </ion-buttons>
 </ion-footer>
