--- a/mobile/src/app/components/evenement/evenement.component.scss
+++ b/mobile/src/app/components/evenement/evenement.component.scss
@@ -60,7 +60,7 @@ h1 {
 
 .ios {
   h1 {
-      font-size: 35px;
+      font-size: 30px;
   }
 }
 
@@ -68,4 +68,9 @@ h1 {
   h1 {
       font-size: 30px;
   }
+}
+
+ion-back-button {
+  color: black;
+  margin-left: 5%;
 }
