--- a/mobile/src/app/tab1/tab1.page.html
+++ b/mobile/src/app/tab1/tab1.page.html
@@ -13,7 +13,7 @@
 
       <ion-card-header>
         <ion-card-title>{{ event?.nom }}</ion-card-title>
-        <ion-card-subtitle>{{ event?.date }}</ion-card-subtitle>
+        <ion-card-subtitle>{{ event?.date }} à {{ event?.heure }}</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
         {{ event?.lieu }}      
