test unitaire rejoindre evenement, test de toute la page

--- a/mobile/src/app/components/rejoindre-event/rejoindre-event.component.html
+++ b/mobile/src/app/components/rejoindre-event/rejoindre-event.component.html
@@ -31,7 +31,7 @@
 </ion-content>
 <ion-content >
   
-  <ion-list>
+  <ion-list class="aliment">
     <ion-card *ngFor="let aliment of aliments" [class.selected]="aliment.selected" (click)="toggleSelection(aliment)">
       <ion-card-content class="item-label">{{ aliment.nom }} - {{ aliment.prix }}€</ion-card-content>
     </ion-card>
