--- a/mobile/src/app/components/evenement/evenement.component.html
+++ b/mobile/src/app/components/evenement/evenement.component.html
@@ -44,7 +44,7 @@
       </ion-card>
     </ion-row>
     <ion-button [routerLink]="['/update-event',event.id]">
-      <ion-icon aria-hidden="true" name="pencil-outline" style="height: 35px; width:150px;"></ion-icon>
+      <ion-icon aria-hidden="true" name="pencil-outline" style="height: 35px; width:150px; color: black;"></ion-icon>
     </ion-button>
 
   </ion-header>
