--- a/mobile/src/app/components/update-event/update-event.component.html
+++ b/mobile/src/app/components/update-event/update-event.component.html
@@ -1,86 +1,81 @@
-
-  <ion-toolbar>
-    <ion-title>Modifier l'événement</ion-title>
-  </ion-toolbar>
-
+<ion-toolbar>
+  <ion-title>Modifier l'événement</ion-title>
+</ion-toolbar>
 
 <ion-content [fullscreen]="true">
   <ion-list>
-    <ion-item>
+    <ion-item *ngIf="event">
       <ion-input
         label="Nom de l'événement"
         labelPlacement="stacked"
         [clearInput]="true"
-        placeholder={{event.nom}}
+        placeholder="{{event?.nom}}"
         [(ngModel)]="event.nom"
       >
       <ion-icon slot="start" name="beer-outline" aria-hidden="true"></ion-icon>
       </ion-input>
-  </ion-item>
+    </ion-item>
 
-  <ion-item>
-    <ion-input
+    <ion-item *ngIf="event">
+      <ion-input
         label="Heure"
         labelPlacement="stacked"
         [clearInput]="true"
-        placeholder={{event.heure}}
+        placeholder="{{event?.heure}}"
         [(ngModel)]="event.heure"
       >
       <ion-icon slot="start" name="location-outline" aria-hidden="true"></ion-icon>
-    </ion-input>
-  </ion-item>
+      </ion-input>
+    </ion-item>
 
-  <ion-item>
-    <ion-input
+    <ion-item *ngIf="event">
+      <ion-input
         label="Date"
         labelPlacement="stacked"
         [clearInput]="true"
-        placeholder={{event.date}}
+        placeholder="{{event?.date}}"
         [(ngModel)]="event.date"
-
       >
       <ion-icon slot="start" name="time-outline" aria-hidden="true"></ion-icon>
-    </ion-input>
-  </ion-item>
+      </ion-input>
+    </ion-item>
 
-  <ion-item>
-    <ion-input
+    <ion-item *ngIf="event">
+      <ion-input
         label="Lieu"
         labelPlacement="stacked"
         [clearInput]="true"
-        placeholder={{event.lieu}}
+        placeholder="{{event?.lieu}}"
         [(ngModel)]="event.lieu"
       >
       <ion-icon slot="start" name="time-outline" aria-hidden="true"></ion-icon>
-    </ion-input>
-  </ion-item>
+      </ion-input>
+    </ion-item>
 
-  <ion-item>
-    <ion-input
+    <ion-item *ngIf="event">
+      <ion-input
         label="Lit(s) disponible(s)"
         labelPlacement="stacked"
         [clearInput]="false"
-        placeholder={{event.nbrLit}}
+        placeholder="{{event?.nbrLit}}"
         [(ngModel)]="event.nbrLit"
       >
       <ion-icon slot="start" name="bed-outline" aria-hidden="true"></ion-icon>
-    </ion-input>
+      </ion-input>
 
-    <ion-input
+      <ion-input
         label="Bob(s)"
         labelPlacement="stacked"
         [clearInput]="false"
-        placeholder={{event.nbrBob}}
+        placeholder="{{event?.nbrBob}}"
         [(ngModel)]="event.nbrBob"
       >
       <ion-icon slot="start" name="car-outline" aria-hidden="true"></ion-icon>
-    </ion-input>
-  </ion-item>
+      </ion-input>
+    </ion-item>
   </ion-list>
   <ion-button shape="round" size="small" (click)="updateEvent()">
     Modifier l'événement
     <ion-icon name="send-outline"></ion-icon>
   </ion-button>
-  
-
 </ion-content>
