--- a/mobile/src/app/pages/login/login.page.html
+++ b/mobile/src/app/pages/login/login.page.html
@@ -15,7 +15,7 @@
             </div>
             <div padding>
               <ion-item>
-                <ion-input name="mail" type="email" placeholder="Mail" ngModel required></ion-input>
+                <ion-input name="idProfil" placeholder="Nom d'utilisateur" ngModel required></ion-input>
               </ion-item>
               <ion-item>
                 <ion-input name="password" type="password" placeholder="Mot de passe" ngModel required></ion-input>
