--- a/mobile/src/app/tabs/tabs.page.html
+++ b/mobile/src/app/tabs/tabs.page.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs id="main-content">
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1" href="/tabs/tab1">
       <img src="../../assets/icon/iziplan_logo.png" alt="Logo" id="accueil">
@@ -18,5 +18,5 @@
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
-
+<app-menu></app-menu>
 
