--- a/mobile/src/app/components/profil-event/profil-event.component.html
+++ b/mobile/src/app/components/profil-event/profil-event.component.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <h1>Profil</h1>
+  <h1 id="title">Profil</h1>
 
   <ion-card *ngIf="profil">
     <ion-card-header id="photoProfil">
