Fix routes + logout

--- a/mobile/src/app/tab3/tab3.page.html
+++ b/mobile/src/app/tab3/tab3.page.html
@@ -51,4 +51,7 @@
       <ion-card-subtitle>Téléphone</ion-card-subtitle>
     </ion-card-header>
   </ion-card>
+  <ion-button shape="round" size="small" (click)="logout()">
+    Se déconnecter
+  </ion-button> 
 </ion-content>
