--- a/mobile/src/app/components/evenement/evenement.component.scss
+++ b/mobile/src/app/components/evenement/evenement.component.scss
@@ -2,6 +2,14 @@ ion-card{
     background-color: #F9E6AC;
 }
 
+ion-button {
+  margin-top: -5%;
+}
+
+.eventInfos {
+  margin-bottom: -1%;
+}
+
 .flex-container {
     display: flex;
 }
@@ -12,12 +20,12 @@ ion-card{
 }
 
 #flex-item-1{
-    margin-right: 0;
+    margin-right: 1%;
 }
 
 ion-row {
-    margin-top: -10px;
-    margin-bottom: 30px;
+    margin-top: 0;
+    margin-bottom: 5%;
     justify-content: space-between;
 }
 
@@ -26,7 +34,14 @@ ion-row {
     ion-card-subtitle {
       flex: 1;
       text-align: left;
+    }
+
+    ion-card-title {
       font-size: 20px;
+    }
+
+    ion-card-subtitle {
+      font-size: 15px;
     }
   
     ion-thumbnail {
