--- a/mobile/src/app/components/profil-event/profil-event.component.scss
+++ b/mobile/src/app/components/profil-event/profil-event.component.scss
@@ -4,7 +4,7 @@
     height: 130px;
     width: 130px;
     background-color: white;
-    
+    margin-top: 5%;
 }
 
 ion-card{
@@ -45,4 +45,21 @@ ion-toolbar {
     #title {
         font-size: 30px;
     }
+}
+
+p, label {
+    color: black;
+}
+
+label {
+    margin-left: 5%;
+}
+
+.horizontal-align {
+    display: flex;
+    align-items: center;
+}
+
+#flex-item-1 {
+    margin-bottom: -7%;
 }
