--- a/mobile/src/app/pages/login/login.page.html
+++ b/mobile/src/app/pages/login/login.page.html
@@ -1,38 +1,42 @@
-<ion-header [translucent]="false">
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Login</ion-title>
+    <div class="toolbar-image-container">
+      <img src="../../assets/icon/IZIPLAN.png" alt="Logo" class="toolbar-image">
+    </div>    
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content [fullscreen]="true">
+  <h1>Se connecter</h1>
   <ion-card>
     <form #form="ngForm" (ngSubmit)="login(form)">
       <ion-grid>
         <ion-row color="primary" justify-content-center>
           <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
-            <div text-center>
-              <h3>Login</h3>
-            </div>
             <div padding>
               <ion-item>
-                <ion-input name="idProfil" placeholder="Nom d'utilisateur" ngModel required></ion-input>
+                <ion-label position="floating">Nom d'utilisateur</ion-label>
+                <ion-input name="idProfil" placeholder="Votre nom d'utilisateur" ngModel required></ion-input>
               </ion-item>
               <ion-item>
-                <ion-input name="password" type="password" placeholder="Mot de passe" ngModel required></ion-input>
+                <ion-label position="floating">Mot de passe</ion-label>
+                <ion-input name="password" type="password" placeholder="Votre mot de passe" ngModel required></ion-input>
               </ion-item>
             </div>
+            <br>
             <div padding>
-              <ion-button color="primary" size="large" type="submit" [disabled]="form.invalid" expand="block">Login</ion-button>
+              <ion-button color="primary" id="loginButton" type="submit" [disabled]="form.invalid" expand="block">Login</ion-button>
             </div>
           </ion-col>
         </ion-row>
-
+        <br>
         <ion-row>
-          <div text-center>
-          Si vous n'avez pas de compte, veuillez <a routerLink='/register'>
-          créer un compte</a> avant tout!
+          <div text-center id="register">
+          Vous n'avez pas encore de compte ? Inscrivez-vous <a routerLink='/register'>
+          par ici</a>
           </div>
         </ion-row>
+        <br>
       </ion-grid>
     </form>
     
