--- a/mobile/src/app/pages/register/register.page.html
+++ b/mobile/src/app/pages/register/register.page.html
@@ -1,70 +1,89 @@
-<ion-header [translucent]="false">
-  <ion-toolbar >
-    <ion-title>Register</ion-title>
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <div class="toolbar-image-container">
+      <img src="../../assets/icon/IZIPLAN.png" alt="Logo" class="toolbar-image">
+    </div>    
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true">
+  <h1>Créer un compte</h1>
   <ion-card>
     <form  #form="ngForm" (ngSubmit)="register(form)">
       <ion-grid>
         <ion-row color="primary" justify-content-center>
           <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
-            <div text-center>
-              <h3>Création de compte</h3>
-            </div>
             <div padding>
 
               <ion-item>
-                <ion-input label="Nom d'utilisateur" name="idProfil" type="text" placeholder="lebgdubat57" ngModel required></ion-input>
+                <ion-label position="floating">Nom d'utilisateur</ion-label>
+                <ion-input name="idProfil" type="text" placeholder="Votre nom d'utilisateur" ngModel required></ion-input>
               </ion-item>
 
               <ion-item>
-                <ion-input  label="Nom" name="name" type="text" placeholder="Neutre" ngModel required></ion-input>
+                <ion-label position="floating">Nom</ion-label>
+                <ion-input name="name" type="text" placeholder="Votre nom" ngModel required></ion-input>
               </ion-item>
 
               <ion-item>
-                <ion-input  label="Prénom" name="firstName" type="text" placeholder="Hugo" ngModel required></ion-input>
+                <ion-label position="floating">Prénom</ion-label>
+                <ion-input name="firstName" type="text" placeholder="Votre prénom" ngModel required></ion-input>
               </ion-item>
 
               <ion-item>
-                <ion-input label="Adresse Mail" name="mail" type="email" placeholder="ton@mail.com" ngModel required></ion-input>
+                <ion-label position="floating">Adresse e-mail</ion-label>
+                <ion-input name="mail" type="email" placeholder="Votre adresse e-mail" ngModel required></ion-input>
               </ion-item>
 
               <ion-item>
-                <ion-input label="Mot de passe" name="password" type="password" placeholder="Mot de passe" ngModel required></ion-input>
+                <ion-label position="floating">Mot de passe</ion-label>
+                <ion-input name="password" type="password" placeholder="Votre mot de passe" ngModel required></ion-input>
               </ion-item>
 
               <ion-item>
-                <ion-input label="Confirmer" name="confirm" type="password" placeholder="Confirmer mot de passe" ngModel required></ion-input>
+                <ion-label position="floating">Confirmation du mot de passe</ion-label>
+                <ion-input name="confirm" type="password" placeholder="Confirmer votre mot de passe" ngModel required></ion-input>
               </ion-item>
 
               <ion-item>
-                <ion-input label="Téléphone" name="numberPhone" type="tel" placeholder="+32 888 88 88 88"  ngModel required></ion-input>
+                <ion-label position="floating">Numéro de téléphone</ion-label>
+                <ion-input name="numberPhone" type="tel" placeholder="Votre numéro de téléphone"  ngModel required></ion-input>
               </ion-item>
 
               <ion-item>
-                <ion-input label="Adresse" name="address" type="text" placeholder="Rue la Rue 2"  ngModel required></ion-input>
+                <ion-label position="floating">Adresse</ion-label>
+                <ion-input name="address" type="text" placeholder="Votre adresse"  ngModel required></ion-input>
               </ion-item>
 
               <ion-item>
-                <ion-input label="Facebook" name="facebook" type="text" placeholder="Ton Facebook"  ngModel required></ion-input>
+                <ion-label position="floating">Compte Facebook</ion-label>
+                <ion-input name="facebook" type="text" placeholder="Votre compte Facebook"  ngModel required></ion-input>
               </ion-item>
 
               <ion-item>
-                <ion-input label="Instagram" name="instagram" type="text" placeholder="ton Instagram"  ngModel required></ion-input>
+                <ion-label position="floating">Compte Instagram</ion-label>
+                <ion-input name="instagram" type="text" placeholder="Votre compte Instagram"  ngModel required></ion-input>
               </ion-item>
 
               <ion-item>
-                <ion-input label="Description" name="description" type="text" placeholder="Description"  ngModel required></ion-input>
+                <ion-label position="floating">Description</ion-label>
+                <ion-input name="description" type="text" placeholder="Votre description"  ngModel required></ion-input>
               </ion-item>
             </div>
-
+            <br>
             <div padding>
-              <ion-button color="primary" size="large" type="submit" [disabled]="form.invalid" expand="block">Register</ion-button>
+              <ion-button color="primary" id="registerButton" type="submit" [disabled]="form.invalid" expand="block">Register</ion-button>
             </div>
           </ion-col>
         </ion-row>
+        <br>
+        <ion-row>
+          <div text-center id="login">
+          Vous avez déjà un compte ? Connectez vous <a routerLink='/login'>
+          par ici</a>
+          </div>
+        </ion-row>
+        <br>
       </ion-grid>
     </form>
   </ion-card>
