--- a/mobile/src/app/tab3/tab3.page.scss
+++ b/mobile/src/app/tab3/tab3.page.scss
@@ -4,7 +4,7 @@
     height: 130px;
     width: 130px;
     background-color: white;
-    
+    margin-top: 5%;
 }
 
 ion-card{
@@ -51,4 +51,17 @@ h1 {
 
 p, label {
     color: black;
+}
+
+label {
+    margin-left: 5%;
+}
+
+.horizontal-align {
+    display: flex;
+    align-items: center;
+}
+
+#flex-item-1 {
+    margin-bottom: -7%;
 }
