--- a/mobile/src/app/tab5/tab5.page.html
+++ b/mobile/src/app/tab5/tab5.page.html
@@ -7,6 +7,9 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" class="ion-text-center">
+  <ion-refresher slot="fixed" (ionRefresh)="refreshEvents($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
     <h1>Anciens événements</h1>
 
     <ion-card *ngFor="let event of tablePastEvents;index as i" class="ion-text-center" [routerLink]="['/evenement',event?.id]">
